Fix accessory-requests table flexbox layout on mobiles

--- a/sass/blocks/_boss-table.sass
+++ b/sass/blocks/_boss-table.sass
@@ -1817,6 +1817,9 @@ $block: ".boss-table"
       #{$block}_page_holidays-report-details #{$block}__cell:nth-child(4) &
         text-align: left
 
+      #{$block}_page_accessory-requests-card &
+        width: 100%
+
     @media screen and (max-width: 640px)
       #{$block}_page_fruit-order-history &
         width: 60%
@@ -1996,6 +1999,10 @@ $block: ".boss-table"
       #{$block}_page_smp-holidays &,
       #{$block}_page_message-board &
         justify-content: flex-start
+
+      #{$block}_page_accessory-requests-card &
+        width: 100%
+
 
     @media screen and (max-width: 640px)
       #{$block}_page_fruit-order-history &
